--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "^4.16.3",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "cheerio": "^1.0.0-rc.2",
-    "node-telegram-bot-api": "^0.30.0"
+    "multer": "^1.3.1",
+    "node-telegram-bot-api": "^0.30.0",
+    "request": "^2.88.0"
   },
   "description": "service to return original instagram and twitter image to user",
   "keywords": [
