--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@line/bot-sdk": "^6.2.1",
     "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "^4.16.3",
     "http-errors": "~1.6.2",
+    "linebot": "^1.4.1",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
     "node-telegram-bot-api": "^0.30.0",
