--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
     "node-telegram-bot-api": "^0.30.0",
+    "puppeteer": "^1.9.0",
     "request": "^2.88.0"
   },
   "description": "service to return original instagram and twitter image to user",
