--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "ejs": "~2.5.7",
     "express": "^4.16.3",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0",
+    "morgan": "^1.9.1",
     "multer": "^1.3.1",
     "node-telegram-bot-api": "^0.30.0",
+    "puppeteer": "^1.10.0",
     "request": "^2.88.0"
   },
   "description": "service to return original instagram and twitter image to user",
