--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "A telegram bot to fetch instagram stories and image",
   "repository": "https://github.com/andrewwang84/94Orig",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
-  "keywords": ["node", "telegram", "instagram", "puppeteer", "cheerio"]
+  "keywords": ["node", "telegram", "instagram", "puppeteer", "cheerio"],
   "buildpacks": [
     {
       "url": "https://github.com/jontewks/puppeteer-heroku-buildpack.git"
