--- a/app.json
+++ b/app.json
@@ -34,7 +34,7 @@
       "value": ""
     },
     "url": {
-      "description": "your projecy url",
+      "description": "your project url",
       "value": ""
     }
   }
