--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "node": "10.13.0"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
-    "cookie-parser": "~1.4.3",
+    "cheerio": "^1.0.0-rc.3",
+    "cookie-parser": "^1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
-    "express": "^4.16.3",
+    "express": "^4.17.1",
     "http-errors": "~1.6.2",
     "morgan": "^1.9.1",
-    "multer": "^1.3.1",
+    "multer": "^1.4.1",
     "node-telegram-bot-api": "^0.30.0",
-    "puppeteer": "^1.17.0",
+    "puppeteer": "^1.18.1",
     "request": "^2.88.0"
   },
   "description": "service to return original instagram and twitter image to user",
