--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "multer": "^1.4.1",
     "node-telegram-bot-api": "^0.30.0",
     "puppeteer": "^1.18.1",
-    "request": "^2.88.0",
-    "sharp": "^0.20.8",
-    "unzip2": "^0.2.5"
+    "request": "^2.88.0"
   },
   "description": "service to return original instagram and twitter image to user",
   "keywords": [
