--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "export NODE_ENV=development && npm start"
   },
   "engines": {
     "node": "10.13.0"
@@ -16,7 +17,6 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
-    "latest": "^0.2.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.1",
     "node-telegram-bot-api": "^0.50.0",
