--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "^4.1.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.1",
