--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": "16.x"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.11",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
