--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "morgan": "^1.10.0",
     "node-telegram-bot-api": "^0.57.0",
     "puppeteer": "^20.7.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "twit": "^2.2.11"
   },
   "description": "service to return original instagram and twitter image to user",
   "keywords": [
