--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "export NODE_ENV=development && npm start"
   },
   "dependencies": {
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "tree-kill": "^1.2.2"
   },
   "description": "service to return original instagram and twitter image to user",
   "keywords": [
